fix: align footer brand with figma

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1333,11 +1333,11 @@ img {
 .marcan-site-footer-brand {
     bottom: auto;
     height: 188px;
-    left: 153px;
+    left: 30px;
     position: absolute;
     right: auto;
     top: 572px;
-    width: 422px;
+    width: 930px;
 }
 
 .marcan-site-footer-brand-desktop {
